2004-12-28  Julio M. Merino Vidal  <jmmv@menta.net>

	* commands.cc: Make the 'log' command show all affected files
	in each revision in a nice format (easier to read than what
	'cat revision' shows).

2004-12-28  graydon hoare  <graydon@pobox.com>

	* change_set.{cc,hh}: Add sanity checking, rework
	some of concatenation logic to accomodate.
	* revision.{cc,hh}: Likewise.
	Teach about generalized graph rebuilding.
	* database.cc (delete_existing_revs_and_certs): New fn.
	* commands.cc (db rebuild): New command.
	(db fsck) New command.
	* sanity.{cc,hh} (relaxed): New flag.
	* work.cc: Use new concatenation logic.

2004-12-25  Julio M. Merino Vidal  <jmmv@menta.net>

	* commands.cc: During 'log', print duplicate certificates (by
	different people) in separate lines, rather than showing them
	together without any spacing.  While here, homogenize new lines
	in other messages as well; this also avoids printing some of
	them in case of missing certificates).

2004-12-24  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_disapprove.at: Enable previously disabled test.

	* tests/t_no_change_deltas.at: New test.
	* testsuite.at: Call it.

2004-12-23  Nathaniel Smith  <njs@codesourcery.com>

	* win32/read_password.c: Remove unused file.

2004-12-20  Matt Johnston  <matt@ucc.asn.au>

        * keys.cc: don't cache bad passphrases, so prompt for a correct
        password if the first ones fail.

2004-12-19  Matt Johnston  <matt@ucc.asn.au>

        * commands.cc: print out author/date next to ambiguous revision
        lists from selectors.

2004-12-22  Julio M. Merino Vidal  <jmmv@menta.net>

	* commands.cc: Verify that the key identifier passed to the pubkey
	and privkey commands exists in the database.  Otherwise exit with
	an informational message instead of an exception.

2004-12-19  Julio M. Merino Vidal  <jmmv@menta.net>

	* testsuite.at:
	* tests/t_fmerge.at:
	* tests/t_netsync.at:
	* tests/t_netsync_single.at:
	* tests/t_revert.at: