@@ -23,11 +23,11 @@ AT_CHECK(MONOTONE --branch=testbranch --rcfile=netsync.lua commit blah-blah, [],
 F_VER0=`SHA1(testfile)`
 VER0=`BASE_REVISION`
 
-killall -q -KILL monotone
+killall -KILL monotone 2> /dev/null
          MONOTONE --rcfile=netsync.lua               serve 127.0.0.1:5555 testbranch &
 sleep 5
 AT_CHECK(MONOTONE --rcfile=netsync.lua --db=test2.db pull 127.0.0.1:5555 testbranch, [], [ignore], [ignore])
-killall -q -KILL monotone
+killall -KILL monotone 2> /dev/null
 
 AT_CHECK(MONOTONE --db=test2.db ls certs $VER0, [], [stdout])
 AT_CHECK(mv stdout certs, [], [ignore])
